 authentication for services, you can probably use the code in here to do it
 quite simple.
 .. please mind any errors, it's been years since I (Stskeeps) last committed to here :)
- Patch to remove lusers.c and change from bzero to memset in ircd.c
  by w00t
- Patch to remove curses leftover (I am going to assume SIGWINCH isn't a
  problem) by w00t 
- Fixed #0003002 reported by DelGurth, fixed by WolfSage regarding trailing \'s in
MOTDs 
- Fixed #0003171 reported by danieldg (typo)
- #0003118 reported by vonitsanet (typo in ADDOMOTD), fixed by WolfSage
- #0003272 reported and fixed by WolfSage (addmotd, addomotd in help.conf)
- #0003274 reported by Stealth regarding using actual nick and not given
  nick in SAPART
- #0002842 reported by Zell, fixed by WolfSage regarding glitch in rehash
  output glitch
- #0003159 reported by aegis and Bock, regarding typos in documentation
- #0002560 reported and patched by w00t, regarding a typo in /SAMODE
- #0002844 reported by RandomNumber: Spamfilter bawks on capitalizing actions 
- #0002404 reported by White_Magic, patched by w00t, removing /addline
  (which the bug report wasnt about)
- #0002420 reported by KnuX fixed by WolfSage
- #0003147 reported by vonitsanet, fixed by djGrrr regarding making
  spamfilters work in case of /setname
- #0002157 reported by Dukat, fixed by djGrrr regarding cloaking module
  allows cloakkey 1 and 3 to be identical. 
- #0003146 reported by vonitsanet, regarding Modes O,S (etc) not rejected for modes-on-connect 
  fixed by djGrrr
- #0003289 suggested and patched by fbi, adding (Ping timeout: 182 seconds)
- #0002932 reported by therock247uk, patched by WolfSage, regarding Local
  opers can /chghost /chgident /chgname on someone thats on another server on
  the network 
- #0003285 patched by w00t, removing add_local_domain and other useless
  stuff
- #0003212 patched by Grunt, regarding /userip <someone_else> seemingly
  shows my (cloaked) IP 