@@ -7,7 +7,7 @@ if [ "$1" = "start" ] ; then
 	if [ -r $PID_FILE ] ; then
 		mv -f $PID_FILE $PID_BACKUP
 	fi
-	@BINDIR@
+	@BINDIR@/ircd
 	sleep 1
 	if [ ! -r $PID_FILE ] ; then
 		sleep 4
@@ -34,11 +34,11 @@ elif [ "$1" = "restart" ] ; then
 	echo "Restarting UnrealIRCd"
 	kill -2 `cat $PID_FILE`
 elif [ "$1" = "mkpasswd" ] ; then
-	@BINDIR@ -P $2 $3
+	@BINDIR@/ircd -P $2 $3
 elif [ "$1" = "version" ] ; then
-	@BINDIR@ -v
+	@BINDIR@/ircd -v
 elif [ "$1" = "configtest" ] ; then
-	@BINDIR@ -e
+	@BINDIR@/ircd -e
 elif [ "$1" = "backtrace" ] ; then
 	cd @IRCDDIR@
 
@@ -93,7 +93,7 @@ elif [ "$1" = "backtrace" ] ; then
 	fi
 
 	# Some ugly prepare work -- ignore errors
-	(echo quit|gdb @BINDIR@ $corefile 2>&1)|\
+	(echo quit|gdb @BINDIR@/ircd $corefile 2>&1)|\
 	grep -i 'no such file'|\
 	awk -F ':' '{ print $1 }'|sort|uniq|\
 	awk -F '.' "{ system(\"ln -s ../$modpath/\" \$2 \".so \" \$0) }"
@@ -113,7 +113,7 @@ bt 3 full
 quit
 __EOF__
 
-	gdb -batch -x gdb.commands @BINDIR@ $corefile
+	gdb -batch -x gdb.commands @BINDIR@/ircd $corefile
 	rm -f gdb.commands
 	echo "GCC: `gcc -v 2>&1|tail -n 1`"
 	echo "UNAME: `uname -a`"
